--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
               <div class="lc-left-win">
 
               </div>
-              <div class="lc-score">
-                
+              <div class="lc-left-win">
+
               </div>
               <div class="lc-score">
                 
