--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="lc-bubbles">
             <!--lc-left-win-->
-              <div class="lc-left-win">
+              <div class="lc-score">
                 
               </div>
               <div class="lc-score">
