--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             
             <div class="lc-bubbles" id="right-margin">
             <!--lc-right-win-->
-              <div class="lc-score">
+              <div class="lc-right-win">
                 
               </div>
               <div class="lc-score">
