--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <div class="lc-right-win">
                 
               </div>
-              <div class="lc-score">
+              <div class="lc-right-win">
                 
               </div>
               <div class="lc-score">
