--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <div class="lc-left-win">
                 
               </div>
-              <div class="lc-score">
+              <div class="lc-left-win">
                 
               </div>
               <div class="lc-score">
