--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <div class="lc-right-win">
                 
               </div>
-              <div class="lc-score">
+              <div class="lc-right-win">
                 
               </div>
           </div>
